# lowdim

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: test.yml
src/: affine_transformation.rs  array.rs  bbox.rs  integer.rs  layout.rs  lib.rs  matrix.rs  matrix2d.rs  matrix3d.rs  matrix4d.rs  point.rs  rect.rs  sym2d.rs  util.rs  vec2d.rs  vec3d.rs  vec4d.rs  vector.rs
