[package]
name = "gamedim"
version = "0.2.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Library for two- or three-dimensional coordinates and arrays."
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = []

# Enable the generation of random points in a bounding box.
random = ["rand"]

[dependencies]
rand = { version = "0.8.1", optional = true }
