[package]
name = "lowdim"
version = "0.4.1-alpha.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Library for two- to four-dimensional integer geometry."
homepage = "https://github.com/starblue/lowdim"
repository = "https://github.com/starblue/lowdim"
documentation = "https://docs.rs/lowdim"
keywords = ["geometry", "2d", "3d", "4d", "array"]
categories = ["mathematics"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = []

# Enable the generation of random points in a bounding box.
random = ["rand"]

[dependencies]
rand = { version = "0.8.4", optional = true }
